# content-hoarder

./: .env.example  .gitattributes  .gitignore  AGENTS.md  BACKLOG.md  CHANGELOG.md  CODEX_HANDOFF_design-v2-round2.md  DEFERRED_QUESTIONS.md  DESIGN.md  LICENSE  NEXT.md  OPEN_QUESTIONS.md  PRODUCT.md  README.md  handoff-p3.4.md  handoff-p3.5.md  nsfw_rules.example.json  pyproject.toml  requirements.txt  twitter-x-bookmarks-handoff.md
.impeccable/: config.json  design.json
bakeoff/: Content-Hoarder-Bakeoff-Plan.md  RESULTS.md  STATUS-REPORT.md  results.csv
delegation/: 01-retry-after.md  02-failed-state.md  03-network-vs-auth.md  04-fts-version.md  05-drain-cap.md  06-int-500s.md  07-env-encoding.md  08-consolidate-roundtrip-test.md  09-tags-merge-test.md  10-test-gaps.md  BATCH-B-START.md  MOBILE-POLISH-BATCH.md  MOBILE-POLISH-T3-BATCH.md  NEXT-DELEGATION.md  P3.1-deck-mode.md  README.md  SPEC-a2-no-feed-refresh-on-triage.md  SPEC-b4-hold-to-preview.md  SPEC-c2-lightbox-zoom.md  SPEC-c3-lightbox-pan-close.md  SPEC-p3-relay-icon-only.md  SPEC-redgifs-resolver-dryrun.md  SPEC-t3-drop-reader-dock.md  SPEC-t3-lightbox-swipe-scroll.md  SPEC-t3-peek-flicker.md  SPEC-t3-playwright-ux-tests.md  SPEC-t3-relay-swipe-close.md  SPEC-t3-sidebar-scroll-lock.md  SPEC-t3-tag-suggest-three.md  TMP-WP1-DELEGATION-PROMPTS.md  TMP-WP2-TASKS.md  agent-a-note-with-video-reader.md  agent-b-triage-score-refit.md  agent-c-triage-back-guard.md  agent-d-snooze-primitive.md  epic-16-scroll-deceleration.md  epic-4-archive-today-recover-opt-in.md  epic-4-vreddit-video-archiving.md  epic-9-bulk-unsave-by-tag.md  firefox-sync-tabs-research.md
docs/: IMPLEMENTATION-HANDOFF-2026-06-17.md  IMPORTING.md  MOBILE_TAILSCALE.md  PUBLISH-SAFETY.md  (+15 more)
(+357 files in other folders)
