[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "content-hoarder"
version = "0.1.0"
description = "A local-first, triage-first manager for saved content across many sources."
requires-python = ">=3.12"
dependencies = ["flask>=3.0,<4.0"]

[project.optional-dependencies]
youtube = ["yt-dlp"]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
