[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "content-hoarder"
version = "1.0.0"
description = "A local-first, triage-first manager for saved content across many sources."
requires-python = ">=3.12"
dependencies = ["flask>=3.0,<4.0"]

[project.scripts]
content-hoarder = "content_hoarder.cli:main"

[project.optional-dependencies]
youtube = ["yt-dlp"]
dev = ["pytest"]
# UI/e2e: real-browser tests (Pixel-6 + PWA emulation). `pip install -e .[ui]` then
# `playwright install chromium`, run with `pytest -m ui`. Kept out of `dev` so the unit
# suite + CI don't need a browser.
ui = ["pytest-playwright"]
# OCR enrich (Spec 14 / #26): also needs the Tesseract binary on PATH.
ocr = ["pytesseract", "Pillow"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# default run excludes the browser tests (no chromium in CI / the fast unit loop);
# run them explicitly with `pytest -m ui`.
addopts = "-q -m 'not ui'"
markers = [
  "ui: real-browser Playwright tests (Pixel-6 / PWA emulation; needs chromium). Run with -m ui.",
]
